--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
+<head>
+    <title>
 
+    </title>
+</head>
+<nav>
+    <a href=""> |Home</a>
+    <a href=""> |Home</a>
+    <a href=""> |Home</a>
+    <a href=""> |Home</a>
+    
+
+</nav>
 <body>
-    <h1>HAPPY PRIDE </h1>
+ 
+
 </body>
 </html>
