--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
     <title>
-
+        test
     </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <nav>
     <a href=""> |Home</a>
@@ -13,7 +14,12 @@
 
 </nav>
 <body>
- 
-<img src="https://i.pinimg.com/736x/34/a6/0a/34a60aeec4fcf12ada83d3eb04abf346.jpg">
+<div class="text">
+<h1>
+    TEXT SAMPLE CLIPPING
+</h1>
+
+</div>
+
 </body>
 </html>
