--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores sequi in quae illo amet commodi, reprehenderit provident aut possimus a nemo aperiam reiciendis numquam alias, officiis cupiditate molestiae ad.
 </p>
 
+<div class="socials">
+    <button onclick="">
+        Instagram
+    </button>
+
+</div>
+
+
+
 </body>
 </html>
