--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>
-        test
-    </title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet">
+    <script src="script.js"></script>
+    <title>Faith's Art Comms</title>
 </head>
-<nav>
+<body>
     
 
-</nav>
-<body>
-<div class="text">
-<h1>
-    TEXT SAMPLE CLIPPING
-</h1>
-</div>
 
-<marquee direction="down" hspace="200px" vspace="200px" scrollamount="100" >
-
-    <img src="https://64.media.tumblr.com/d49b9234640d9b59555298112cab4b6e/7db1562272cda594-51/s2048x3072/aed7641fc854a738eac4f1456cfdd1c46e9fa18f.pnj">
-</marquee>
-
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores sequi in quae illo amet commodi, reprehenderit provident aut possimus a nemo aperiam reiciendis numquam alias, officiis cupiditate molestiae ad.
-</p>
-
-<div class="socials">
-    <button onclick="">
-        Instagram
-    </button>
-
-</div>
 
 
 
