--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Faith's Art Comms</title>
 </head>
+
+<nav>
+
+<img src="images/logo.png" class="logo">
+
+</nav>
 <body>
-    
 
-
+<img src="/images/pose1.png" >
 
 
 
