--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 </head>
 
 <nav>
-
-<img src="images/logo.png" class="logo">
-<h1>FAITHFEL</h1>
-
-
+    <img src="images/logo.png" class="logo">
+    <h1>FAITHFEL</h1>
 </nav>
 <body>
 
-<img src="/images/bg.jpg" class="headerbg">
+<!--Header 1st-->
+<section class="hero">
+    <img src="/images/bg.jpg" class="headerbg">
+    <img src="/images/pose1.png">
+</section>
 
-<img src="/images/pose1.png" >
+
+<!--Social Media Link Tree-->
+<section class="socials">
 
 
+</section>
 
 </body>
 </html>
