--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>Faith's Art Comms</title>
 </head>
 
+<!--Navigation-->
 <nav>
     <img src="images/logo.png" class="logo">
     <h1>FAITHFEL</h1>
 </nav>
+
+<!--Body-->
 <body>
 
-<!--Header 1st-->
+<!--Header Hero-->
 <section class="hero">
     <img src="/images/bg.jpg" class="headerbg">
     <img src="/images/pose1.png">
@@ -23,9 +26,12 @@
 
 <!--Social Media Link Tree-->
 <section class="socials">
-
-
-
+    <h1></h1>
+    <button>Instagram</button>
+    <button>Twitter</button>
+    <button>Tumblr</button>
+    <button>Discord</button>
+    <button>Email</button>
 
 </section>
 
