--- a/index.html
+++ b/index.html
@@ -26,14 +26,30 @@
 
 <!--Social Media Link Tree-->
 <section class="socials">
+    <!--
     <h1></h1>
     <button>Instagram</button>
     <button>Twitter</button>
     <button>Tumblr</button>
     <button>Discord</button>
     <button>Email</button>
-
+-->
 </section>
+
+<!--Commission Section-->
+<section>
+    <button>Commission</button>
+
+<!--Pop up-->
+<div class="Popup" id="Popup">
+ <div class="Header">
+    <div class="comstitle">COMMISIONS</div>
+    <div class="close">&times;</div>
+ </div>
+
+</div>
+</section>
+
 
 </body>
 </html>
