--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
 <!--Pop up-->
 <div class="Popup" id="Popup">
- <div class="Header">
+ <div class="popupHeader">
     <div class="comstitle">COMMISIONS</div>
-    <div class="close">&times;</div>
+    <button class="close">&times;</button>
  </div>
+
 
 </div>
 </section>
