--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!--Header Hero-->
 <section class="hero">
-    <img src="/images/bg.jpg" class="headerbg">
+    <img src="/images/w.png" class="headerbg">
     <img src="/images/pose1.png">
 </section>
 
